# ghcjs-typescript

./: .gitignore  .gitmodules  README.md  Raw.hs  TODO.md  Test.hs  ghcjs-typescript.cabal  stack.yaml
GHCJS/: TypeScript.hs
GHCJS/TypeScript/: Function.hs  Object.hs  Types.hs
examples/highcharts/: Raw.hs  Test.hs
ghcjs-typescript/: ghcjs-typescript.cabal  stack.yaml
ghcjs-typescript-convert/: ghcjs-typescript-convert.cabal
ghcjs-typescript-convert/GHCJS/TypeScript/: Convert.hs
ghcjs-typescript-convert/GHCJS/TypeScript/Convert/: Collect.hs  Munge.hs  Render.hs  Types.hs  Util.hs
ghcjs-typescript-convert/test/: definitely-typed.hs
ghcjs-typescript/GHCJS/TypeScript/: Types.hs
ghcjs-typescript/test/: input.hs
test/: Examples.hs  expected-output  input.hs  test.hs
