name:                ghcjs-typescript-convert
version:             0.1.0.0
synopsis:            Converts typescript definitions into Haskell
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Sloan
maintainer:          mgsloan@gmail.com
copyright:           (c) 2015 Michael Sloan
category:            JavaScript
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GHCJS.TypeScript.Convert.Util
                       GHCJS.TypeScript.Convert.Types
                       GHCJS.TypeScript.Convert.Collect
                       GHCJS.TypeScript.Convert.Munge
                       GHCJS.TypeScript.Convert.Render
                       GHCJS.TypeScript.Convert
  other-extensions:    RecordWildCards, TemplateHaskell, StandaloneDeriving, TupleSections
  build-depends:       base == 4.*
                     , lens
                     , mtl
                     , containers
                     , directory
                     , filepath
                     , parsec
                     , MissingH
                     , language-typescript
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite definitely-typed
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             definitely-typed.hs
  ghc-options:         -Wall
  build-depends:       base == 4.*
                     , directory
                     , filepath
                     , ghcjs-typescript-convert
                     , language-typescript
